minor design fixes on mobile

--- a/src/styles/components/Button.scss
+++ b/src/styles/components/Button.scss
@@ -1,7 +1,7 @@
 @import "../variables.scss";
 .termin-button {
-  width: 300px;
-  height: 60px;
+  width: 275px;
+  height: 56px;
   display: flex;
   align-items: center;
   justify-content: center;
