--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -42,10 +42,9 @@
           display: flex;
           align-items: center;
           justify-content: space-evenly;
-          // border-radius: 8px;
           border-top-left-radius: 8px;
           border-bottom-right-radius: 8px;
-          // opacity: 0.75;
+          opacity: 0.75;
           .gmap-content {
             padding-left: 8px;
             display: flex;
@@ -63,11 +62,6 @@
               width: 100%;
               font-size: 13px;
               font-weight: 900;
-              .rose {
-                width: 20px;
-                height: 20px;
-                padding-right: 5px;
-              }
             }
             a {
               color: $light-blue;
@@ -111,11 +105,11 @@
           font-size: $small;
           font-weight: 700;
           border-radius: 8px;
-          border: 4px solid $light-blue;
+          border: 3px solid $light-blue;
           cursor: pointer;
           background-color: $white;
-          color: $dark-blue;
-          opacity: 1;
+          color: $light-blue;
+          opacity: 0.9;
           transition: all 0.5s ease;
 
           &:hover {
@@ -374,17 +368,42 @@
           background-size: cover;
           background-position: 100% 100%;
           width: 100%;
-          height: 95%;
+          height: 96%;
           border: none;
           border-radius: 0px;
+          .gmap-div-container {
+            top: 5px;
+            left: 8px;
+            width: 275px;
+            justify-content: space-evenly;
+            border-radius: 0px;
+            .gmap-content {
+              // background-color: red;
+              width: 75%;
+              .gmap-name {
+                font-size: 12px;
+              }
+            }
+            .gmap-direction {
+              font-size: 12px;
+              padding-right: 5px;
+              .route-icon-container {
+                .route-icon {
+                  font-size: 40px;
+                  color: $light-blue;
+                }
+              }
+            }
+          }
           .map-before-btn {
             margin-bottom: 10px;
             width: 180px;
-            height: 42px;
+
+            height: 44px;
             font-size: 1.4rem;
             font-weight: 700;
             border-radius: 5px;
-            border: 3px solid $light-blue;
+            border: 3px solid $gray-6;
             cursor: pointer;
             background-color: $light-blue;
             color: $white;
